k8s-nginx-sanitize-certs/openshift-route.yaml
apiVersion: route.openshift.io/v1
kind: Route
metadata:
  name:  nginx-large-route
  annotations:
    haproxy.router.openshift.io/timeout: 90s
  namespace: default
spec:
  host: localhost.example.com
  path: /
  to:
    kind: Service
    name: nginx-large-service
    weight: 100
  port:
    targetPort: http
  tls:
    termination: edge
    insecureEdgeTerminationPolicy: Allow
    certificate: |
      -----BEGIN CERTIFICATE-----
      MIIK6zCCBtOgAwIBAgIUDIRRVTYumLNOVRJbPkMVg+HubhQwDQYJKoZIhvcNAQEN
[...]
      jfHAYo/IteV7FaNg7hkh
      -----END CERTIFICATE-----
  key: |
    -----BEGIN PRIVATE KEY-----
    MIISQgIBADANBgkqhkiG9w0BAQEFAASCEiwwghIoAgEAAoIEAQDNAXO3VuTvpEGc
[...]
    mb1ecnr8WZ0NYy0H6jsexsnGG7sc3Q==
    -----END PRIVATE KEY-----

wildcardPolicy: None
